# inline-tdd

./: README.md  convert_tests.py  convert_to_tdd.py  demo_tdd.py  pyproject.toml  tdd_summary.py  test_tdd.py  test_tdd_verification.py
.github/workflows/: python-publish.yml  python-test.yml
demo/: example.py  features.py
demo/parallel/: a.py  b.py  c.py  d.py
integration-tests/parallelization/test_files/: a.py  b.py  c.py  d.py  e.py  f.py  g.py  h.py  i.py  j.py
integration-tests/tdd/: a.py  a1.py  b.py  c.py  class1.py  d.bak  d.py  db.py  e.py  future.py  np_ops.py
src/inline/: plugin.py
src/inline_tdd/: __about__.py  __init__.py  inline.py  plugin.py  strip.py
tests/: test_plugin.py  test_plugin.py.bak  test_strip.py
