[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inline_tdd"]

[project]
name = "pytest-inline-tdd"
dynamic = ["version"]
description = "A pytest plugin for writing inline tests"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Zhichao Zhou", email = "zhouzhch@shanghaitech.edu.cn" }]
maintainers = [
    { name = "Zhichao Zhou", email = "zhouzhch@shanghaitech.edu.cn" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["pytest>=7.0,<9.0"]

[project.optional-dependencies]
dev = ["hatch", "coverage[toml]", "black", "ruff", "tox", "tox-gh"]

[project.urls]
Issues = "https://github.com/zzctmac/inline-tdd/issues"
Source = "https://github.com/zzctmac/inline-tdd"

[project.entry-points.pytest11]
inline_tdd = "inline_tdd.plugin"

[tool.hatch.version]
path = "src/inline_tdd/__about__.py"

# testing (pytest)
[tool.pytest.ini_options]
addopts = "-p pytester"
testpaths = ["tests"]

# code coverage (coverage)
[tool.coverage.run]
source_pkgs = ["inline_tdd", "tests"]
branch = true
parallel = true
omit = ["src/inline_tdd/__about__.py"]

[tool.coverage.paths]
inline_tdd = ["src/inline_tdd", "*/inline_tdd/src/inline_tdd"]
tests = ["tests", "*/inline/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

# formatting (black)
[tool.black]
target-version = ["py38"]
line-length = 120

# linting (ruff)
[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle error
    "F", # pyflakes
    "I", # isort
]

[tool.ruff.lint.isort]
known-first-party = ["inline_tdd"]
